Fixed gap in .content__details.

--- a/styles/style.css
+++ b/styles/style.css
@@ -80,7 +80,7 @@ ol {
 .content__details {
   display: flex;
   flex-direction: column;
-  gap: 26px;
+  gap: 22px;
   width: 100%;
   height: 100%;
 }
